02_defense_strategies/05-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-service-ingress
  namespace: np-demo
spec:
  tls:
  - hosts:
    - my-service.svc
    secretName: my-service-tls-secret
  rules:
  - host: my-service.svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
